--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
@@ -24,3 +26,4 @@ yarn-error.log*
 
 user story.txt
 modifications for react blog app.txt
+google fonts.txt
