process.env not working - hardcoded server url

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+google_fonts.txt
 user story.txt
 modifications for react blog app.txt
-google fonts.txt
+
